# file-verse

./: CMakeLists.txt  Makefile  README.md  build.sh  default.uconf  dir_test.omni  file.omni  hierarchy_test.omni  index.html  ofs_server  ofs_test  ofs_test.omni  run_ofs  script.js  student_test.omni  test  test.cpp  test1.cpp  test1_ofs  test_client.py  test_ofs
Documentation/: design_choices.md  fifo_workflow.md  file_io_strategy.md  testing_report.md  user_guide.md
compiled/: client  default.uconf  server  student_test.omni
documentation/: design_choices.md  fifo_workflow.md  file_io_strategy.md  testing_report.md  user_guide.md
include/: filesystem.h  hash_table.h  ofs_types.h  queue.h
ofs_client/: ofs_client.py
source/: FSNode.cpp  FreeSpaceManager.cpp  default.uconf  main.cpp  server_main.cpp
source/client/: client.cpp
source/core/: config.cpp  dir_manager.cpp  directory_operations.c  file_io.cpp  file_manager.cpp  file_operations.c  filesystem.cpp  fs_core.c  fs_core.cpp  fs_format.cpp  fs_init.cpp  hash_table.cpp  main.cpp  metadata.cpp  ofs_core.cpp  queue.cpp  security.c  user_management.c  user_manager.cpp
source/data_structures/: FSNode.cpp  FreeSpaceManager.cpp  RequestQueue.cpp  bitmap.c  bitmap.hpp  dynamic_array.hpp  fifo_queue.h  fs_tree.c  hash_table.c  hashmap.hpp  linked_list.hpp  queue.c
source/include/: FSNode.h  FreeSpaceManager.h  HashTable.h  LinkedList.h  bitmap.h  config.h  file_io.h  filesystem.h  fs.h  fs_tree.h  hash_table.h  ofs_core.hpp  ofs_types.h  queue.h  security.h
src/: filesystem.cpp  main.cpp  server.cpp
(+17 files in other folders)
